--- a/.gitignore
+++ b/.gitignore
@@ -273,7 +273,8 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
-node_modules/
+ExpressProject2/my-app/node_modules/
+ExpressProject2/api/node_modules
 
 # Visual Studio 6 build log
 *.plg
